# jupyterlab-disk-usage

./: .copier-answers.yml  .dockerignore  .gitignore  .prettierignore  Dockerfile  LICENSE  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  check-release.yml
disk_usage/: __init__.py  handlers.py
jupyter-config/server-config/: disk_usage.json
src/: handler.ts  index.ts
